# swarm-oracle

./: .gitignore  CONTRIBUTING.md  Dockerfile  JUDGES.md  LICENSE  Makefile  README.md  SECURITY.md  SUBMISSION_CHECKLIST.md  architecture.html  benchmark.html  benchmark.json  demo.html  design.md  docker-compose.yml  docker-entrypoint.sh  index.html  pyproject.toml  record-demo.sh  swarm_verify.py  test_swarm_evidence.py
contracts/: README.md  agent_registry.json  bridge.py  deploy.sh  foundry.toml
demo/: demo-recording.txt  swarm-oracle-demo.cast
docs/: DEMO_VIDEO_SCRIPT.md  DEPLOYMENT.md  ECONOMIC_MODEL.md  SUBMISSION_DEVNETWORK.md  SUBMISSION_KITEAI.md  competitive-comparison.md  security-model.md  threat-model.md
examples/: demo.sh
notebooks/: swarm_oracle_demo.ipynb
scripts/: adversarial_demo.py  benchmark.py  economic_model.py  host-commit-benchmark.sh  host-commit-run10.sh  host-commit-run11.sh  host-commit-run12.sh  sybil_demo.py
swarm_oracle/: __init__.py  adversarial.py  agent.py  api.py  cli.py  consensus.py  demo_mode.py  evidence.py  on_chain.py  sybil.py  verifier.py  weights.py
tests/: test_adversarial.py  test_adversarial_demo.py  test_agent_identity.py  test_api.py  test_benchmark.py  test_demo_mode.py  test_economic_model.py  test_integration.py  test_landing_page.py  test_notebook.py  test_on_chain.py  test_repo_norms.py  test_reward_distribution.py  test_submission_readiness.py  test_swarm_agent.py  test_swarm_cli.py  test_swarm_consensus.py  test_swarm_evidence.py  test_swarm_verifier.py  test_swarm_weights.py  test_sybil.py  (+1 more)
(+13 files in other folders)
